--- a/config/md2pdf.config.sample
+++ b/config/md2pdf.config.sample
@@ -36,13 +36,13 @@ DEVELOPER_ROLE=Your Role/Title
 PROJECT_NAME=
 
 # Project version
-PROJECT_VERSION=1.0.0
+PROJECT_VERSION=2.0.0
 
 # Project description
-PROJECT_DESCRIPTION=Your project description here
+PROJECT_DESCRIPTION=A powerful Markdown to PDF converter with token replacement, beautiful styling, and advanced features
 
 # Project repository URL
-PROJECT_REPO=https://github.com/your-username/your-repo
+PROJECT_REPO=https://github.com/feralcreative/md2pdf
 
 # =============================================================================
 # DATE AND TIME TOKENS
@@ -66,7 +66,7 @@ PROJECT_REPO=https://github.com/your-username/your-repo
 # {{HOSTNAME}} - System hostname
 # {{USERNAME}} - Current system username
 # {{PWD}} - Current working directory
-# {{SCRIPT_DIR}} - Directory where md2pdf.sh is located
+# {{SCRIPT_DIR}} - Directory where md2pdf is located
 
 # =============================================================================
 # CUSTOM TOKENS
