--- a/package.json
+++ b/package.json
@@ -41,21 +41,22 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
-    "puppeteer": "^21.0.0",
+    "chalk": "^4.1.2",
+    "commander": "^11.0.0",
+    "fs-extra": "^11.0.0",
+    "glob": "^10.0.0",
     "marked": "^9.0.0",
     "marked-footnote": "^1.2.2",
-    "commander": "^11.0.0",
-    "chalk": "^4.1.2",
-    "fs-extra": "^11.0.0",
     "path": "^0.12.7",
-    "glob": "^10.0.0",
+    "puppeteer": "^21.0.0",
     "which": "^4.0.0"
   },
   "devDependencies": {
-    "jest": "^29.0.0",
+    "@types/node": "^20.0.0",
     "eslint": "^8.0.0",
+    "jest": "^29.0.0",
     "nodemon": "^3.0.0",
-    "@types/node": "^20.0.0"
+    "sass": "^1.92.1"
   },
   "jest": {
     "testEnvironment": "node",
